make sure side bar overlaps map zoom control, closes #320

--- a/src/sass/component/_side-slider.scss
+++ b/src/sass/component/_side-slider.scss
@@ -2,7 +2,7 @@ $slider-width: 240px;
 
 .side-slider {
     position: absolute;
-    z-index: 1000;
+    z-index: 1001;
     @include border-box;
     @include transition-fast;
     color: white;
